# gtk-vnc

./: AUTHORS  ChangeLog  NEWS  README  config.h.in  gtk-vnc.spec  gtk-vnc.spec.in  meson.build  meson_options.txt  mingw-gtk-vnc.spec.in  prepare-release.sh
build-aux/: dist.sh  vc-list-files
debian/: changelog  control  copyright  gbp.conf  libgtk-vnc-2.0-0.symbols  libgvnc-1.0-0.symbols  libgvnc-1.0-dev.install  rules
debian/tests/: control
debian/upstream/: metadata
examples/: gvncviewer.c  gvncviewer.py  meson.build
po/: LINGUAS  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fr.po  fur.po  gd.po  gl.po  guc.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  nb.po  nds.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  (+11 more)
src/: continuation.c  continuation.h  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  dh.c  dh.h  gtk-vnc.h  gvnc.h  gvncpulse.h  libgtk-vnc_sym.version  libgvnc_sym.version  meson.build  vncaudio.c  vncaudio.h  vncaudioformat.c  vncaudioformat.h  vncaudiopulse.c  vncaudiopulse.h  vncaudiosample.c  vncaudiosample.h  vncbaseaudio.c  vncbaseaudio.h  vncbaseframebuffer.c  vncbaseframebuffer.h  vncbaseframebufferblt.h  vnccairoframebuffer.c  vnccairoframebuffer.h  vnccolormap.c  vnccolormap.h  vncconnection.c  vncconnection.h  vncconnectionblt.h  vncconnectiontest.c  vnccursor.c  vnccursor.h  vncdisplay.c  vncdisplay.h  vncdisplaykeymap.c  vncdisplaykeymap.h  (+9 more)
tools/: gvnccapture.c  meson.build
